--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/telescope": "^4.9",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "rafaellaurindo/laravel-telegram-logging": "^1.0"
     },
     "require-dev": {
+        "brianium/paratest": "^6.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
