--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
+        "php-open-source-saver/jwt-auth": "^2.0",
         "rafaellaurindo/laravel-telegram-logging": "^1.0"
     },
     "require-dev": {
