--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^3.0",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
         "php-open-source-saver/jwt-auth": "^2.0",
+        "psr/simple-cache": "3.0",
         "rafaellaurindo/laravel-telegram-logging": "^1.0"
     },
     "require-dev": {
